--- a/style.css
+++ b/style.css
@@ -11322,7 +11322,7 @@ header.masthead {
   overflow: hidden;
   padding-top: calc(7rem + 72px);
   padding-bottom: 7rem;
-  background: #000080;
+  background: #2B4593;
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: scroll;
