--- a/style.css
+++ b/style.css
@@ -11386,6 +11386,6 @@ header.masthead .bg-circle-4 {
   margin-right: 1300px;
 }
 
-  img.ex2{
-    margin-left: 1300px
+  img.ex2 {
+    margin-left: 1300px;
   }
