--- a/style.css
+++ b/style.css
@@ -11382,14 +11382,9 @@ header.masthead .bg-circle-4 {
     font-size: 4rem;
   }
 
-  img.ex1 {
-  margin-right: 1300px;
+img.img2{
+  margin-left: 1000px;
 }
-
-  img.ex2 {
-    margin-left: 1300px;
-  }
-
 
 
   {
