--- a/style.css
+++ b/style.css
@@ -11382,15 +11382,18 @@ header.masthead .bg-circle-4 {
     font-size: 4rem;
   }
 
-img.img2{
-  margin-left: 1100px;
-}
 
   {
   box-sizing: border-box;
 }
 
 .column {
+  float: left;
+  width: 33.33%;
+  padding: 10px;
+}
+
+.img2{
   float: left;
   width: 33.33%;
   padding: 10px;
