--- a/style.css
+++ b/style.css
@@ -11393,7 +11393,7 @@ header.masthead .bg-circle-4 {
   padding: 10px;
 }
 
-.carousel-inner img {
+.carosel-inner876 img {
   width: 100%;
   height: 100%;
 }
